CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

# You can specify the build type as below 
# -DCMAKE_BUILD_TYPE=Debug
# -DCMAKE_BUILD_TYPE=Release

PROJECT (StudyPthread)

ADD_DEFINITIONS(-std=c99)
FIND_PACKAGE(Threads)

ADD_EXECUTABLE(pi pi.cpp)
TARGET_LINK_LIBRARIES(pi ${CMAKE_THREAD_LIBS_INIT})

ADD_EXECUTABLE(exam1 exam1.c)
TARGET_LINK_LIBRARIES(exam1 ${CMAKE_THREAD_LIBS_INIT})

ADD_EXECUTABLE(exam2 exam2.c)  # Print 0 1 2 1 0 1 ...
TARGET_LINK_LIBRARIES(exam2 ${CMAKE_THREAD_LIBS_INIT})

ADD_EXECUTABLE(exam3 exam3.c)  # Consumer, producer
TARGET_LINK_LIBRARIES(exam3 ${CMAKE_THREAD_LIBS_INIT})

ADD_EXECUTABLE(exam4 exam4.c)  # Print A B C A B C ...
TARGET_LINK_LIBRARIES(exam4 ${CMAKE_THREAD_LIBS_INIT})

ADD_EXECUTABLE(exam5 exam5.c)  # Print A B C A B C ...
TARGET_LINK_LIBRARIES(exam5 ${CMAKE_THREAD_LIBS_INIT})
